@@ -10,6 +10,9 @@ What's New in Python 3.4.0 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #17807: Generators can now be finalized even when they are part of
+  a reference cycle.
+
 - Issue #1545463: At shutdown, defer finalization of codec modules so
   that stderr remains usable.
 
